<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
<item android:title="@string/btn_home"
    android:icon="@drawable/home"
    android:id="@+id/home"
    android:showAsAction="always"></item>
    <item android:title="@string/btn_forum"
        android:icon="@drawable/forum"
        android:id="@+id/forum"
        android:showAsAction="always"></item>
    <item android:title="@string/btn_study"
        android:icon="@drawable/study"
        android:id="@+id/study"
        android:showAsAction="always"></item>
    <item android:title="Tiện ích">
        <menu>
            <item android:title="@string/btn_setting"
                android:icon="@drawable/settings"
                android:id="@+id/setting"
                android:showAsAction="always">

            </item>
            <item android:title="@string/log_out"
                android:icon="@drawable/log_out"
                android:id="@+id/log_out"
                android:showAsAction="always"></item>
        </menu>
    </item>

</group>
</menu>